--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,16 @@
 <html>
     <head>
         <title>Gorimaps</title>
+        
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="{% static '/css/style.css' %}">
         <link rel="stylesheet" href="{% static '/css/Iblock.css' %}">
         <link rel="stylesheet" href="{% static '/css/IIblock.css' %}">
         <link rel="stylesheet" href="{% static '/css/footer.css' %}">
         <link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
         <link rel="stylesheet" href="{% static '/css/history.css' %}">
+        <link rel="stylesheet" href="{% static '/css/mobilemenu.css' %}">
     </head>
 
     <body>
