--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -43,8 +43,37 @@
     </div>
     
     <div class="map"><img class="iconmap" src="{% static '/icons/Iconmap.png' %}"></div>
-    <div class="menu"><img class="iconmenu" src="{% static '/icons/Iconmenu.png' %}"></div>
 
+    <div class="menu" onclick="openNav()">
+          <div id="mymenu" class="menu-content">
+
+  </div><img class="iconmenu" src="{% static '/icons/Iconmenu.png' %}"></div>
+
+    <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
+        <img src="{% static '/icons/Iconclosex.png' %}" class="iconmenuclose">
+      </a>
+       <span class="mobilemenuheader">გორის ახალი იდენტობა</span>
+      <div class="line6"></div>
+      <center>
+        <div class="mobilemenusearchbar">
+            <span class="mobilemenusearchtext">ძებნა საიტზე</span>
+            <img src="{% static '/icons/Iconmobilesearch.png' %}" class="mobilemenusearchicon">
+        </div>
+      </center>
+      <div class="overlay-content"> 
+
+        <center><br><br>
+        <a href="{% url 'index_page' lang=lang %}" class="mobilemenuitem">მთავარი</a>
+        <a href="{% url 'about_project' lang=lang %}" class="mobilemenuitem">პროექტის შესახებ</a>
+        <a href="{% url 'history' lang=lang %}" class="mobilemenuitem">ისტორია</a>
+        <a href="{% url 'culture' lang=lang %}" class="mobilemenuitem">კულტურა</a>
+        <a href="{% url 'architect' lang=lang %}" class="mobilemenuitem">არქიტექტურა</a>
+        <a href="#" class="mobilemenuitem">ადამიანები</a>
+        <a href="#" class="mobilemenuitem">მოგვწერეთ</a>
+        </center>
+      </div>
+    </div>
 
 
 </nav>
@@ -68,5 +97,30 @@ window.onclick = function(event) {
       }
     }
   }
+}
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.maxHeight){
+      content.style.maxHeight = null;
+    } else {
+      content.style.maxHeight = content.scrollHeight + "px";
+    } 
+  });
+}
+
+
+</script>
+<script>
+function openNav() {
+  document.getElementById("myNav").style.height = "100%";
+}
+
+function closeNav() {
+  document.getElementById("myNav").style.height = "0%";
 }
 </script>
