--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,15 @@
   font-family: LGVAnastasia;
 }
 
-body, html {
+body {
   background: #F1F1E6;
-   overflow-x: hidden;
+   overflow-x: hidden !important;
     margin: 0;
     padding: 0;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 
