--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -42,13 +42,12 @@
     </div>
     </div>
     
-    <div class="map"><img class="iconmap" src="{% static '/icons/Iconmap.png' %}"></div>
+    
 
     <div class="menu" onclick="openNav()">
-          <div id="mymenu" class="menu-content">
-
-  </div><img class="iconmenu" src="{% static '/icons/Iconmenu.png' %}"></div>
-
+          <div id="mymenu" class="menu-content"></div>
+    <img class="iconmenu" src="{% static '/icons/Iconmenu.png' %}"></div>
+<div class="map"><img class="iconmap" src="{% static '/icons/Iconmap.png' %}"></div>
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
         <img src="{% static '/icons/Iconclosex.png' %}" class="iconmenuclose">
