--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -27,5 +27,40 @@
 
 
 </div>
+
+<div class="mobilefooter">
+	<center>
+		<span class="mobilefooterfindus">გვიპოვეთ</span>
+		<img class="socialicons" src="{% static '/icons/fb.png' %}">
+		<img class="socialicons" src="{% static '/icons/tw.png' %}">
+		<img class="socialicons" src="{% static '/icons/yt.png' %}">
+		<img class="socialicons" src="{% static '/icons/ig.png' %}">
+
+		<span class="mobilefootercontactus">დაგვიკავშირდით</span>
+
+		<div class="footercontactyldivs">
+			<img class="footercontacticons" src="{% static '/icons/Iconphone.png' %}">
+			<span class="footercontactinfo" style="margin-left: 32px;">+995 322 2 92 15 14</span>
+		</div>
+		<div class="footercontactyldivs">
+				<img class="footercontacticons" src="{% static '/icons/Iconemail.png' %}">
+				<span class="footercontactinfo" style="margin-left: 13px;">idfi@info.ge</span>
+		</div>
+		<span class="mobilefooteraboutproject">პროექტის ფინანსური მხარდაჭერები არიან
+		USAID და ZINC Network. პლატფორმა შექმნილია
+		IDFI-ის მიერ.</span>
+		<div class="footersupports">
+		<img class="footersupportsiconsusaid" src="{% static '/icons/usaid.png' %}">
+		<img class="footersupportsiconszinc" src="{% static '/icons/zinc.png' %}">
+		<img class="footersupportsiconsidfi" src="{% static '/icons/idfi.png' %}">
+		</div>
+
+	</center>
+</div>
+
 <div class="underDiv"></div>
+<div class="mobileunderDiv">
+	<span class="mobileunderdivheader">გორის ახალი იდენტობა</span>
+	<span class="mobilefooterallright">ყველა უფლება დაცულია © 2022</span>
+</div>
 
