--- a/static/css/IIblock.css
+++ b/static/css/IIblock.css
@@ -320,6 +320,11 @@ margin-top: 20px;
 }
 }
 
+@media only screen and (min-width: 1616px) {
+	.culturediv{
+		margin-left: 20px;
+	}
+}
 
 @media only screen and (min-width: 1331px) {
 	.tellusmoremobile{
