little fix on navbar mobile

--- a/gori/templates/aboutproject.html
+++ b/gori/templates/aboutproject.html
@@ -63,7 +63,7 @@
 		<img class="aboutprojectimgmobile" src="{% static about_project.post_img_second %}">
 
 		<span class="aboutprojectmobiledonors">დონორები</span>
-				<span class="aboutprojectmobiledonorsinfo">{{about_project.donors_text}}</span>
+				<span class="aboutprojectmobiledonorsinfo">აქ თქვენ შეგიძლიათ გაეცნოთ ისტორიულ მოვლენებს,აქ თქვენ შეგიძლიათ გაეცნოთ ისტორიულ მოვლენებს,აქ თქვენ შეგიძლიათ გაეცნოთ ისტორიულ მოვლენებს,აქ თქვენ შეგიძლიათ გაეცნოთ ისტორიულ მოვლენებს,აქ თქვენ შეგიძლიათ გაეცნოთ ისტორიულ მოვლენებს.</span>
 
 			<br><br><br><br>
 
