--- a/static/css/aboutproject.css
+++ b/static/css/aboutproject.css
@@ -145,7 +145,9 @@ line-height: 41px;
 
 color: #F6C042;
 }
-
+@media only screen and (min-width: 1297px){
+.aboutprojectmobile{display: none;}
+}
 @media only screen and (max-width: 1296px){
 	.aboutprojectdesktop{
 		display: none;
