update some detail on mobile

--- a/gori/templates/architect.html
+++ b/gori/templates/architect.html
@@ -9,6 +9,7 @@
 	}
 
 </style>
+<div class="historydekstop">
 
 <span class="historypageheader">გორის არქიტექტურა</span>
 
@@ -23,7 +24,20 @@
 	<img src="{% static post.post_img %}" class="hitorypostsimgs">
 </div>
 {% endfor %}
+</div>
 
+<center>
+<div class="historymobile">
+	<span class="aboutprojectmobileheader" style="margin-right: 220px;">არქიტექტურა</span>
+	{% for post in posts %}
+	<div class="mobileposts">
+		<img src="{% static post.post_img %}" class="historypostsmobile">
+		<span class="historymobilepostsheader">{{post.post_title}} </span>
+	</div>
+
+	{% endfor %}
+</div>
+</center>
 <br><br><br><br><br><br>
 
 {% endblock %}
