--- a/gori/templates/culture.html
+++ b/gori/templates/culture.html
@@ -9,6 +9,7 @@
 	}
 
 </style>
+<div class="historydekstop">
 <span class="historypageheader">კულტურა</span>
 
 
@@ -22,7 +23,23 @@
 	<img src="{% static post.post_img %}" class="hitorypostsimgs">
 </div>
 {% endfor %}
+</div>
 
+
+<center>
+
+<div class="historymobile">
+	<span class="aboutprojectmobileheader" style="margin-right: 250px;">კულტურა</span>
+	{% for post in posts %}
+	<div class="mobileposts">
+		<img src="{% static post.post_img %}" class="historypostsmobile">
+		<span class="historymobilepostsheader">{{post.post_title}} </span>
+	</div>
+	{% endfor %}
+</div>
+
+
+</center>
 <br><br><br><br><br><br>
 
 {% endblock %}
