--- a/gori/templates/architect.html
+++ b/gori/templates/architect.html
@@ -16,6 +16,7 @@
 
 {% for post in posts %}
 
+<a href="{% url 'architect-detail' lang=lang id=post.id %}">
 <div class="historypostdivs">
 	<div class="historyposttextsdiv">
 	<span class="historypostheader"> {{post.post_title}}</span>
@@ -23,6 +24,7 @@
 	</div>
 	<img src="{% static post.post_img %}" class="hitorypostsimgs">
 </div>
+</a>
 {% endfor %}
 </div>
 
