--- a/gori/templates/history.html
+++ b/gori/templates/history.html
@@ -18,6 +18,7 @@
 
 {% for post in posts %}
 
+<a href="{% url 'history-detail' lang=lang id=post.id %}">
 <div class="historypostdivs">
 	<div class="historyposttextsdiv">
 	<span class="historypostheader"> {{post.post_title}}</span>
@@ -25,6 +26,7 @@
 	</div>
 	<img src="{% static post.post_img %}" class="hitorypostsimgs">
 </div>
+</a>
 {% endfor %}
 </div>
 
