--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
         <link rel="stylesheet" href="{% static '/css/history.css' %}">
         <link rel="stylesheet" href="{% static '/css/mobilemenu.css' %}">
+        <link rel="stylesheet" href="{% static '/css/detail_post.css' %}">
     </head>
 
     <body>
