--- a/gori/templates/architect_detail.html
+++ b/gori/templates/architect_detail.html
@@ -6,7 +6,7 @@
 
 <div class="post_first_block">
 
-<a class="post_go_back" href="{% url 'architect' lang=lang %}">უკან დაბრუნება</a>
+<a class="post_go_back" href="{% url 'history' lang=lang %}">უკან დაბრუნება</a>
 <span class="post_title">{{history}}</span>
 <div class="post_social_divs"></div>
 <div class="post_social_divs"></div>
