--- a/gori/templates/architect.html
+++ b/gori/templates/architect.html
@@ -32,11 +32,12 @@
 <div class="historymobile">
 	<span class="aboutprojectmobileheader" style="margin-right: 220px;">არქიტექტურა</span>
 	{% for post in posts %}
+	<a href="{% url 'architect-detail' lang=lang id=post.id %}">
 	<div class="mobileposts">
 		<img src="{% static post.post_img %}" class="historypostsmobile">
 		<span class="historymobilepostsheader">{{post.post_title}} </span>
 	</div>
-
+	</a>
 	{% endfor %}
 </div>
 </center>
