--- a/gori/templates/history.html
+++ b/gori/templates/history.html
@@ -35,10 +35,12 @@
 <div class="historymobile">
 	<span class="aboutprojectmobileheader" style="margin-right: 250px;">ისტორია</span>
 	{% for post in posts %}
+	<a href="{% url 'history-detail' lang=lang id=post.id %}">
 	<div class="mobileposts">
 		<img src="{% static post.post_img %}" class="historypostsmobile">
 		<span class="historymobilepostsheader">{{post.post_title}} </span>
 	</div>
+	</a>
 	{% endfor %}
 </div>
 
